# neuralnet

./: Cargo.toml  download_data.sh
src/: main.rs  mnist.rs  network.rs
