[package]
name = "backprop"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
kdam = "0.6.2"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
ndarray-stats = "0.6.0"
rand = "0.8.5"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.19"

[profile.release]
debug = true
